--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@vercel/postgres": "^0.4.0",
     "autoprefixer": "10.4.14",
+    "drizzle-orm": "^0.27.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
@@ -31,5 +33,8 @@
     "stripe": "^12.9.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.19.2"
   }
 }
